implement flex and grid on children

--- a/index.html
+++ b/index.html
@@ -57,24 +57,32 @@
         </div>
         <header>
             <div class="header-row">
-                <img src="Icons/magnify.svg" alt="">
-                <form action="" method="get">
-                 <label for="search-bar"></label>
-                 <input type="text" id="search-bar">
-                </form>
-                <img src="Icons/bell-ring-outline.svg" alt="">
-                <img src="Icons/man.svg" alt="">
-                <h3>John Alexander</h2>
+                <div>
+                    <img src="Icons/magnify.svg" alt="">
+                    <form action="" method="get">
+                    <label for="search-bar"></label>
+                    <input type="text" class="search-bar" id="search-bar">
+                    </form>
+                </div>
+                <div>
+                    <img src="Icons/bell-ring-outline.svg" alt="">
+                    <img src="Icons/man.svg" alt="">
+                    <h3>John Alexander</h2>
+                </div>
             </div>
             <div class="header-row">
-                <img src="Icons/man.svg" alt="">
                 <div>
-                    <p>Hi there</p>
-                    <h2>John Alexander</h2>
+                    <img src="Icons/man.svg" alt="">
+                    <div>
+                        <p>Hi there</p>
+                        <h2>John Alexander</h2>
+                    </div>
                 </div>
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
+                <div class="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </header>
         <section>
