--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body>`
     <main>
         <div class="sidebar">
             <div class="logo">
@@ -163,7 +163,7 @@
                 <div class="trending-row">
                     <img src="Icons/man.svg" alt="">
                         <div>
-                            <h4>@user1</h4>
+                            <h3>@user1</h4>
                             <p>Awesome Project</p>
                         </div>
                     </img>
@@ -171,7 +171,7 @@
                 <div class="trending-row">
                     <img src="Icons/man.svg" alt="">
                         <div>
-                            <h4>@user2</h4>
+                            <h3>@user2</h4>
                             <p>Awesomer Project</p>
                         </div>
                     </img>
@@ -179,7 +179,7 @@
                 <div class="trending-row">
                     <img src="Icons/man.svg" alt="">
                         <div>
-                            <h4>@user3</h4>
+                            <h3>@user3</h4>
                             <p>Awesomest Project</p>
                         </div>
                     </img>
@@ -187,7 +187,7 @@
                 <div class="trending-row">
                     <img src="Icons/man.svg" alt="">
                         <div>
-                            <h4>@user4</h4>
+                            <h3>@user4</h4>
                             <p>An ok project</p>
                         </div>
                     </img>
